--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,8 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Create SSH key file
+    - name: Create SSH key file and directory
       run: |
+        mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
       env:
@@ -24,7 +25,7 @@ jobs:
       run: |
         ssh ubuntu@13.40.19.4 << EOF
           # Remove existing files and directories in the destination path
-          rm -rf /projects/{{ github.event.repository.name }}/*
+          rm -rf /projects/${{ github.event.repository.name }}/*
         EOF
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -32,8 +33,8 @@ jobs:
 
     - name: Copy code to EC2
       run: |
-        ssh ubuntu@13.40.19.4 "mkdir -p /projects/{{ github.event.repository.name }}"
-        scp -r ./ ubuntu@13.40.19.4:/projects/{{ github.event.repository.name }}
+        ssh ubuntu@13.40.19.4 "mkdir -p /projects/${{ github.event.repository.name }}"
+        scp -r ./ ubuntu@13.40.19.4:/projects/${{ github.event.repository.name }}
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         # You'll need to add your private key as a secret in your repository settings.
@@ -43,11 +44,11 @@ jobs:
         ssh ubuntu@13.40.19.4 << EOF
           
           # Change to your application directory
-          cd /projects/{{ github.event.repository.name }}
+          cd /projects/${{ github.event.repository.name }}
           # Check if the project directory exists
-          if [ -d {{ github.event.repository.name }} ]; then
+          if [ -d ${{ github.event.repository.name }} ]; then
             # The project directory exists, update the code with Git
-            cd {{ github.event.repository.name }}
+            cd ${{ github.event.repository.name }}
             git pull
           else
             # The project directory doesn't exist, no need to clone
@@ -56,5 +57,5 @@ jobs:
           # Install Node.js dependencies
           npm install
           # Start your Node.js application with PM2 using npm run dev
-          pm2 restart {{ github.event.repository.name }} --update-env || pm2 start "npm run dev -p" --name {{ github.event.repository.name }}
+          pm2 restart ${{ github.event.repository.name }} --update-env || pm2 start "npm run dev -p" --name ${{ github.event.repository.name }}
         EOF
