--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: SSH into EC2 and delete existing files
       run: |
-        ssh ubuntu@13.40.19.4 << EOF
+        ssh -vvv ubuntu@13.40.19.4 << EOF
           # Remove existing files and directories in the destination path
           rm -rf /projects/${{ github.event.repository.name }}/*
         EOF
