--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,8 +22,11 @@ jobs:
     - name: Create SSH key file and directory
       run: |
         mkdir -p ~/.ssh
-        echo "$SSH_PRIVATE_KEY" > $SSH_IDENTITY_FILE
-        chmod 600 $SSH_IDENTITY_FILE
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+      shell: /bin/bash -e {0}
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: SSH into EC2 and delete existing files
       run: |
