--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,7 +38,8 @@ jobs:
     - name: Copy code to EC2
       run: |
         ssh -vvv -i $SSH_IDENTITY_FILE $SSH_HOST "mkdir -p /projects/$PROJECT_NAME"
-        scp -r -i $SSH_IDENTITY_FILE ./ $SSH_HOST:/projects/$PROJECT_NAME
+        echo "Passed here oo"
+        scp -vvv -r -i $SSH_IDENTITY_FILE ./ $SSH_HOST:/projects/$PROJECT_NAME
 
     - name: SSH into EC2 and deploy Node.js 18
       run: |
