--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         ssh -vvv -i $SSH_IDENTITY_FILE $SSH_HOST "sudo mkdir -p /projects/$PROJECT_NAME"
         echo "Passed here oo"
-        scp -vvv -r -i $SSH_IDENTITY_FILE ./ $SSH_HOST:/projects/$PROJECT_NAME
+        sudo scp -vvv -r -i $SSH_IDENTITY_FILE ./ $SSH_HOST:/projects/$PROJECT_NAME
 
     - name: SSH into EC2 and deploy Node.js 18
       run: |
