--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,11 +33,12 @@ jobs:
         ssh -vvv -o "StrictHostKeyChecking=no" -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
           # Remove existing files and directories in the destination path
           rm -rf /projects/$PROJECT_NAME/*
+          sudo mkdir -p /projects/$PROJECT_NAME
         EOF
 
     - name: Copy code to EC2
       run: |
-        ssh -vvv -i $SSH_IDENTITY_FILE $SSH_HOST "sudo mkdir -p /projects/$PROJECT_NAME"
+        scp -vvv -i $SSH_IDENTITY_FILE -r ./ $SSH_HOST:/projects/$PROJECT_NAME
         echo "Passed here oo"
 
     - name: SSH into EC2 and deploy Node.js 18
