--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,58 +34,4 @@ jobs:
           # Remove existing files and directories in the destination path
           sudo mkdir -p /projects/$PROJECT_NAME
         EOF
-
-    - name: Check Source Directory Permissions and Contents
-      run: |
-        # Check permissions of the source directory
-        if [ -r ./ ]; then
-          echo "Source directory is readable."
-          # Print the contents of the source directory
-          ls -l
-        else
-          echo "Source directory is not readable or does not exist."
-          exit 1
-        fi
-      shell: /bin/bash -e {0}
-
-    - name: SSH into EC2 and Check Destination Directory
-      run: |
-        ssh -vvv -o "StrictHostKeyChecking=no" -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
-          # Check if the destination directory exists
-          if [ -d /projects/$PROJECT_NAME ]; then
-            echo "Destination directory exists."
-          else
-            echo "Destination directory does not exist."
-            exit 1
-          fi
-        EOF
-
-    - name: copy file via ssh key
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: $SSH_HOST
-        username: ${{ secrets.USERNAME }}
-        port: ${{ secrets.PORT }}
-        key: ${{ secrets.KEY }}
-        source: "tests/a.txt,tests/b.txt"
-        target: your_server_target_folder_path
-
-    - name: SSH into EC2 and deploy Node.js 18
-      run: |
-        ssh -vvv -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
-          # Change to your application directory
-          cd /projects/$PROJECT_NAME
-          # Check if the project directory exists
-          if [ -d $PROJECT_NAME ]; then
-            # The project directory exists, update the code with Git
-            cd $PROJECT_NAME
-            git pull
-          else
-            # The project directory doesn't exist, no need to clone
-            echo "Project directory does not exist."
-          fi
-          # Install Node.js dependencies
-          npm install
-          # Start your Node.js application with PM2 using npm run dev
-          pm2 restart $PROJECT_NAME --update-env || pm2 start "npm run dev -p" --name $PROJECT_NAME
-        EOF
+        echo "I did itttt"
