--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,4 +33,30 @@ jobs:
         ssh -o "StrictHostKeyChecking=no" -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
           sudo mkdir -p projects/$PROJECT_NAME
         EOF
-        echo "I did itttt"
+
+    - name: SCP Copy to EC2
+      run: |
+        scp -o StrictHostKeyChecking=no -i $SSH_IDENTITY_FILE  -r ./ $SSH_HOST:/projects/$PROJECT_NAME
+        echo "Passed here oo"
+      shell: /usr/bin/bash -e {0}
+
+
+    - name: SSH into EC2 and deploy Node.js 18
+      run: |
+        ssh -vvv -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
+          # Change to your application directory
+          cd /projects/$PROJECT_NAME
+          # Check if the project directory exists
+          if [ -d $PROJECT_NAME ]; then
+            # The project directory exists, update the code with Git
+            cd $PROJECT_NAME
+            git pull
+          else
+            # The project directory doesn't exist, no need to clone
+            echo "Project directory does not exist."
+          fi
+          # Install Node.js dependencies
+          npm install
+          # Start your Node.js application with PM2 using npm run dev
+          pm2 restart $PROJECT_NAME --update-env || pm2 start "npm run dev -p" --name $PROJECT_NAME
+        EOF
