--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,7 @@ jobs:
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
+        eval "$(ssh-agent -s)"
         ssh-add ~/.ssh/id_rsa
       shell: /bin/bash -e {0}
       env:
