--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,16 +3,16 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Adjust this to your main branch name
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # You can choose the OS that fits your EC2 instance
+    runs-on: ubuntu-latest
 
     env:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_HOST: ubuntu@13.40.19.4
-      SSH_IDENTITY_FILE: ~/.ssh/id_rsa
+      SSH_IDENTITY_FILE: $HOME/.ssh/id_rsa
       PROJECT_NAME: ${{ github.event.repository.name }}
 
     steps:
@@ -21,14 +21,15 @@ jobs:
 
     - name: Create SSH key file and directory
       run: |
-        mkdir -p ~/.ssh
-        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        mkdir -p $HOME/.ssh
+        echo "$SSH_PRIVATE_KEY" > $SSH_IDENTITY_FILE
+        chmod 600 $SSH_IDENTITY_FILE
         eval "$(ssh-agent -s)"
-        ssh-add ~/.ssh/id_rsa
+        ssh-add $SSH_IDENTITY_FILE
       shell: /bin/bash -e {0}
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SSH_IDENTITY_FILE: $HOME/.ssh/id_rsa
 
     - name: Check Source Directory Permissions and Contents
       run: |
@@ -45,16 +46,15 @@ jobs:
 
     - name: SSH into EC2 and delete existing files
       run: |
-        ssh -o "StrictHostKeyChecking=no" -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
+        ssh -o "StrictHostKeyChecking=no" -o "ForwardAgent=no" -i $SSH_IDENTITY_FILE $SSH_HOST << EOF
           sudo mkdir -p projects/$PROJECT_NAME
         EOF
 
     - name: SCP Copy to EC2
       run: |
-        sudo scp -vvv -r -o StrictHostKeyChecking=no -i $SSH_IDENTITY_FILE ./ $SSH_HOST:~/projects/$PROJECT_NAME
+        sudo scp -vvv -r -o StrictHostKeyChecking=no -o ForwardAgent=no -i $SSH_IDENTITY_FILE ./ $SSH_HOST:~/projects/$PROJECT_NAME
         echo "Passed here oo"
       shell: /usr/bin/bash -e {0}
-
 
     - name: SSH into EC2 and deploy Node.js 18
       run: |
