--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: SCP Copy to EC2
       run: |
-        sudo scp -vvv -r -o StrictHostKeyChecking=no -o ForwardAgent=no -i /home/runner/.ssh/id_rsa ./ $SSH_HOST:~/projects/$PROJECT_NAME
+        sudo scp -vvv -r -o StrictHostKeyChecking=no -o ForwardAgent=no -i /home/runner/.ssh/id_rsa $(pwd) $SSH_HOST:~/projects/$PROJECT_NAME
         echo "Passed here oo"
       shell: /usr/bin/bash -e {0}
 
