--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -13,9 +13,10 @@ jobs:
 
     env:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      SSH_HOST: ubuntu@13.40.19.4
-      SSH_IDENTITY_FILE: /home/runner/.ssh/id_rsa
-      PROJECT_NAME: ${{ github.event.repository.name }}
+      VPN_USER: deploymentagent
+      VPN_PWD: !QW@3er4@.d3PloY12
+      VPN_HOST: myidentitypass.local
+      VPN_PORT: 8050
 
     steps:
     - name: Checkout code
