--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       VPN_USER: deploymentagent
-      VPN_PWD: !QW@3er4@.d3PloY12
+      VPN_PWD: '!QW@3er4@.d3PloY12'
       VPN_HOST: myidentitypass.local
       VPN_PORT: 8050
 
