--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -21,3 +21,5 @@ jobs:
     steps:
     - name: Checkout code
       uses: horellana/openconnect@v1.0.1
+      with:
+        VPN_USER: deploymentagent
