--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -28,5 +28,5 @@ jobs:
         uses: "kota65535/github-openvpn-connect-action@v2"
         with:
           config_file: client.ovpn
-          username: deploymentagent
-          password: !QW@3er4d#ploy!@#@423
+          username: "deploymentagent"
+          password: "!QW@3er4d#ploy!@#@423"
