--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -28,4 +28,10 @@ jobs:
         uses: "kota65535/github-openvpn-connect-action@v2"
         with:
           config_file: client.ovpn
-
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: "10.70.0.114"
+          username: "myidentitypass.local\\florence"
+          password: "!QW@3er4@.Fl0R#n@!"
+          script: whoami
