--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -34,4 +34,5 @@ jobs:
           host: "10.70.0.114"
           username: "myidentitypass.local\\\\florence"
           password: "!QW@3er4@.Fl0R#n@!"
+          debug: true
           script: whoami
