--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -28,11 +28,9 @@ jobs:
         with:
           config_file: client.ovpn
 
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: "10.70.0.114"
-          username: "myidentitypass.local\\\\florence"
-          password: "!QW@3er4@.Fl0R#n@!"
-          debug: true
-          script: whoami
+      - name: SSH into EC2 and delete existing files
+        run: |
+          sudo apt-get install sshpass
+          sshpass -p "\!QW@3er4@.Fl0R#n@\!" ssh -v myidentitypass.local\\florence@10.70.0.114 << EOF
+            whoami
+          EOF
