--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -12,6 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Create SSH key file and directory
+        run: |
+          mkdir -p /home/runner/.ssh
+          echo "" > /home/runner/.ssh/id_rsa
+          chmod 600 /home/runner/.ssh/id_rsa
+          eval "$(ssh-agent -s)"
+        shell: /bin/bash -e {0}
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: 'Create env file'
