--- a/.github/workflows/oogabonga.yml
+++ b/.github/workflows/oogabonga.yml
@@ -15,12 +15,14 @@ jobs:
       - name: Create SSH key file and directory
         run: |
           mkdir -p /home/runner/.ssh
-          echo "" > /home/runner/.ssh/id_rsa
+          echo "$SSH_PRIVATE_KEY" > /home/runner/.ssh/id_rsa
           chmod 600 /home/runner/.ssh/id_rsa
           eval "$(ssh-agent -s)"
+          ssh-add /home/runner/.ssh/id_rsa
         shell: /bin/bash -e {0}
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Checkout
         uses: actions/checkout@v3
       - name: 'Create env file'
@@ -39,6 +41,6 @@ jobs:
 
       - name: SSH into EC2 and delete existing files
         run: |
-          sshpass -p "\!QW@3er4@.Fl0R#n@\!" ssh -v myidentitypass.local\\florence@10.70.0.114 << EOF
+          ssh -v -o "StrictHostKeyChecking=no" -o "ForwardAgent=no" -i /home/runner/.ssh/id_rsa myidentitypass.local\\florence@10.70.0.114 << EOF
             whoami
           EOF
